# ontology-studio

./: .gitignore  Dockerfile  README.md  backend.py  neo4j_tools.py  pyproject.toml  test_e2e.py
backend/: __init__.py  requirements.txt
backend/skills/: README.md
backend/src/host/: __init__.py  __main__.py  app.py  main.py
backend/src/modules/: __init__.py
backend/src/modules/agent_session/: __init__.py  api.py  history_compression.py  sandbox_tools.py  service.py  session_store.py  tool_call_parser.py
backend/src/modules/document_indexing/: __init__.py  ocr_service.py  service.py  tools.py
backend/src/modules/files/: __init__.py  api.py  service.py
backend/src/modules/ontology/: __init__.py  api.py  embedding.py  layered_schema.py  schema_models.py  schema_store.py  tools.py
backend/src/shared/: __init__.py
backend/src/shared/kernel/: __init__.py  model_profiles.py  settings.py
backend/src/shared/logging/: __init__.py  agent_logger.py  smart_logger.py
backend/src/shared/sandbox/: __init__.py  docker_backend.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/features/chat/: ChatPanel.vue
frontend/src/features/files/: FilePanel.vue
frontend/src/features/ontology/: GoldenQuestionReviewPanel.vue  OntologyBuildBriefPanel.vue  OntologyGraphPanel.vue  OntologySchemaPanel.vue
frontend/src/features/session/: ContextPanel.vue  TodoPanel.vue
frontend/src/host/: AppShell.vue
frontend/src/shared/hooks/: useOntologyStudio.js
frontend/src/shared/ui/: CollapsiblePanel.vue  MarkdownContent.vue  (+1 more)
